src/app/globals.css
@font-face {
  font-family: Canela Trial;
   src: url('/fonts/Canela-Trial.woff') format('woff2');
    font-weight: normal;
   font-display: swap;
}

@font-face {
  font-family: Cotta;
   src: url('/fonts/cotta-free.woff') format('otf');
    font-weight: normal;
   font-display: swap;
}

@font-face {
  font-family: 'Optima nova LT Pro';
  src: url('/fonts/OptimaNovaLTProRegular.woff') format('woff2');
  font-weight: normal;
   font-display: swap;
}
@font-face {
  font-family: 'Optima nova LT Pro';
  src: url('/fonts/Sharp-Sans.woff') format('woff2');
  font-weight: normal;
   font-display: swap;
}

body{
  background: #F6F6F6 !important;
}
.announcement-bar{
  background: #9F212C;
}

.announcement-bar_text{
color: #FFF;
text-align: center;
font-family: Sharp Sans;
font-size: 16px;
font-style: normal;
font-weight: 500;
line-height: 100%; 
letter-spacing: 1.08px;
}

.main-slider-section .splide__pagination__page{
    width: 30px !important;
    height: 6px !important;
    border-radius: 0 !important;
    margin: 5px !important;
    background-color: #CBCBCB !important;
}
.main-slider-section .splide__pagination__page.is-active {
  background-color: #000 !important;
}

.zillara-logo{
  max-width: 220px;
max-height: 58px;
object-fit: contain;
}

.footer-section{
  background-color: #fff;
}
.footer-links-title{
  color: #2D2D2D;
  font-family: Cotta;
  font-size: 26px;
  font-style: normal;
  font-weight: 400;
  line-height: 126.5%; /* 32.89px */
}

.footer-links-text{
  color: #686868;
  font-family: Optima LT Pro;
  font-size: 20px;
  font-style: normal;
  font-weight: 500;
  line-height: 247.5%; /* 49.5px */
  text-decoration: none;
}

.footer-text{
  color: #2D2D2D;
  font-family: Optima LT Pro;
  font-size: 21px;
  font-style: normal;
  font-weight: 400;
  line-height: 140%; /* 29.4px */
}
.footer-copyright-text{
  color: #2D2D2D;
  font-family: Cotta;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: 140%; /* 25.2px */
}
.footer-twitter-icon{
  background: #1DA1F2;
  padding: 10px;
}
.footer-block-items{
  border-bottom: 1px solid #C1C1C1;
}
.footer-input-group{
  padding: 5px;
    border-radius: 8.728px;
    border: 0.97px solid #C1C1C1;
    background: #FFF!important;
    display: flex;
    justify-content: center;
    align-items: center;
}
.subscribe-input {
  background: transparent;
  color: #B8B8B8!important;
  font-size: 18px;
  font-family: Optima LT Pro;
  border: none;
  outline: none;
}
.subscribe-btn {
  border-radius: 8.728px;
  background: #9F212C !important;
  color: #FFF !important;
  font-family: Optima LT Pro !important;
  text-transform: uppercase;
}
.footer-input-group .form-control{
border: none;
outline: none;
}

.footer-input-group .form-control:focus{
  border: none;
  outline: none;
  box-shadow: none;
  }
@media(min-width:768px){
  .footer-block{
    border-right: 1px solid #C1C1C1;
    }
    .footer-block:last-child{
      border-right: none;
      }
}


.main-slider_item{
  position: relative;
  height: 100%;
}

.main-slider_item_content{
  max-width: 488px;
  position: absolute;
  top: 0;
  left: 5%;
  height: 100%;
  display: flex;
  align-items: center;
  padding: 40px;  
}
.main-slider_item-section_heading{
  color: #2D2D2D;
font-family: Cotta;
}

.main-slider_item-section_text{
  color: #111;
  font-family: Optima LT Pro;
}
.main-slider-section img{
 min-height: 650px;
 width: 100vw;
 object-fit: cover;

}




.search-input{
  border-bottom: 1px solid #B3B3B3;
  padding-bottom: 10px;
}
.search-input input, .search-input input::placeholder{
  color: #B3B3B3;
  font-family: Poppins;
  font-size: 40px;
  font-style: normal;
  font-weight: 300;
  line-height: normal;
}

.map-section .form-control:focus{
  outline: none;
  border: none;
  box-shadow: none !important;
}
.search-icon-btn{
  bottom: 15px;
}
.find-store-btn{
  border-radius: 31px !important;
  border: 1px solid #969696 !important;
  background: #FFF !important;
  color: #2D2D2D;
  font-family: Poppins;
  font-size: 20px;
  font-style: normal;
  font-weight: 300;
  line-height: normal;
  cursor: default;
}

